Fix eboard profile photos being stretched

--- a/static/style.css
+++ b/static/style.css
@@ -32,8 +32,6 @@ section {
 }
 
 img {
-    max-width: 100%;
-    height: 100%;
     display: block;
     border-radius: 10px;
 }
